# Office-Word-MCP-Server

./: .dockerignore  Dockerfile  README.md  __init__.py  docker-compose.yml  mcp-config.json  pyproject.toml  requirements.txt  setup.py  setup_mcp.py  word_server.py
